# semio.py

./: pyproject.toml
semio/: __init__.py  core.py
semio/rhino/: __init__.py  rhino.py
semio/rhino/grasshopper/: __init__.py  app.py  grasshopper.py
tests/: __init__.py  test_config.py  test_grasshopper.py  test_rhino.py  test_semio_core.py  test_semio_parsers.py
tests/elements/: RectangleWithMiter.gh
tests/examples/: AttractionExample.gh
